--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
             color: white;
             font-family: sans-serif;
             display: flex;
-            justify-content: space-between;
+            gap: 2rem;
+            justify-content: center;
         }
 
         .cta {
@@ -112,7 +113,7 @@
             </select>
         </div>
     </div>
-    <div class="cta">Start your journey. Click anywhere.</div>
+    <div class="cta">Start your journey. Choose a Brush and Click anywhere.</div>
     <script>
 
         class PseudoRandomGenerator {
