--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             top: 50%;
             left: 0;
             width: 100%;
+            transform: translateY(-50%);
             text-align: center;
             pointer-events: none;
-            font-size: 11px;
             color: gray;
         }
 
@@ -113,7 +113,11 @@
             </select>
         </div>
     </div>
-    <div class="cta">Start your journey. Choose a Brush and Click anywhere.</div>
+    <div class="cta">
+        <strong>Start your journey</strong><br/>
+        Go Full screen<br/>
+        Choose a Brush<br/>
+        Click anywhere</div>
     <script>
 
         class PseudoRandomGenerator {
