--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="1920" height="1200" style="opacity: 1;"></canvas>
+    <canvas id="canvas"></canvas>
     <svg id="svg" xmlns="http://www.w3.org/2000/svg">
     </svg>
     <div id="clickarea"></div>
