--- a/index.html
+++ b/index.html
@@ -444,8 +444,21 @@
             document.getElementById('brush').value = brushIdx
         }
 
-
+        let pageX = 0
+        let pageY = 0
         clickArea.addEventListener('click', click)
+        clickArea.addEventListener('mousemove', e => {
+            pageX = e.pageX
+            pageY = e.pageY
+        })
+        document.addEventListener('keydown', e => {
+            if (e.key === ' ') {
+                click({
+                    pageX,
+                    pageY,
+                })
+            }
+        })
         let introState = 0
         function click(e) {
             if (introState === 0) {
