--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         let introState = 0
         function click(e) {
             if (introState === 0) {
-                // document.body.requestFullscreen()
+                document.body.requestFullscreen()
                 document.body.querySelector('.cta-1').style.display = 'none'
                 document.body.querySelector('.cta-2').style.display = 'block'
                 document.body.querySelector('.ui').style.display = 'flex'
